edit for indicating dummy

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
   <header id="header">
     <div class="headerLogo">
-      <a href="index.html"><img src="img/top-icon.png" alt="top-icon" id="top-icon">minimali,Inc.</a>
+      <a href="index.html"><img src="img/top-icon.png" alt="top-icon" id="top-icon">minimali,Inc. このサイトはダミーです。</a>
     </div>
     <div class="headerNav">
       <!-- ハンバーガーアイコン -->
