--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/icon.png">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/resetResponsive.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/reponsive.css">
+  <link rel="stylesheet" href="https://ken-watarai.github.io/corprate-portfolio-site/css/reset.css">
+  <link rel="stylesheet" href="https://ken-watarai.github.io/corprate-portfolio-site/css/resetResponsive.css">
+  <link rel="stylesheet" href="https://ken-watarai.github.io/corprate-portfolio-site/css/style.css">
+  <link rel="stylesheet" href="https://ken-watarai.github.io/corprate-portfolio-site/css/reponsive.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
   <script>console.log("");</script>
