--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/icon.png">
-  <link rel="stylesheet" href="https://ken-watarai.github.io/corprate-portfolio-site/css/reset.css">
-  <link rel="stylesheet" href="https://ken-watarai.github.io/corprate-portfolio-site/css/resetResponsive.css">
-  <link rel="stylesheet" href="https://ken-watarai.github.io/corprate-portfolio-site/css/style.css">
-  <link rel="stylesheet" href="https://ken-watarai.github.io/corprate-portfolio-site/css/reponsive.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/resetResponsive.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/reponsive.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
   <script>console.log("");</script>
@@ -17,12 +17,9 @@
 </head>
 
 <body id="homeBGC">
-  <div id="testAppeal">
-    <h1>このサイトはダミーであり、<br>実在する人物・団体との関係はございません。</h1>
-  </div>
   <header id="header">
     <div class="headerLogo">
-      <a href="index.html"><img src="img/top-icon.png" alt="top-icon" id="top-icon">minimali,Inc. このサイトはダミーです。</a>
+      <a href="index.html"><img src="img/top-icon.png" alt="top-icon" id="top-icon">minimali,Inc. このサイトはダミーです</a>
     </div>
     <div class="headerNav">
       <!-- ハンバーガーアイコン -->
